--- a/styles/bethroom.scss
+++ b/styles/bethroom.scss
@@ -5,13 +5,13 @@ body{
         width: 100%;
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
         justify-content: center;
         .row{
             width: 100%;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            justify-content: flex-start;
+            align-items:center;
         }
 
         .fixed{
