index text changed

--- a/styles/basement.scss
+++ b/styles/basement.scss
@@ -62,7 +62,7 @@ body{
 
 #hereIs:hover{
     background-image:url(
-        "../sources/discarded_palace_key_elden_ring_wiki_guide_200px.png"
+        "../sources/llaveCocina.png"
         );
     background-repeat: no-repeat;
     background-position: center;
