--- a/styles/basement.css
+++ b/styles/basement.css
@@ -65,7 +65,7 @@ body {
 }
 
 #hereIs:hover {
-  background-image: url("../sources/discarded_palace_key_elden_ring_wiki_guide_200px.png");
+  background-image: url("../sources/llaveCocina.png");
   background-repeat: no-repeat;
   background-position: center;
 }
