--- a/styles/kitchen.css
+++ b/styles/kitchen.css
@@ -20,6 +20,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-top: 5%;
 }
 
 .buttons button {
