--- a/styles/kitchen.scss
+++ b/styles/kitchen.scss
@@ -14,11 +14,13 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 5%;
     button{
         width: 15%;
         color: white;
         border: 1px solid white;
         background-color: transparent;
+        
         margin-bottom: 5%;
         margin-right: 4%;
         a{
