--- a/styles/livingroom.scss
+++ b/styles/livingroom.scss
@@ -1,5 +1,8 @@
 body{background-color: black;}
 
+#picture{
+    width: 100%;
+}
 .numbersGrid{
     display: flex;
     flex-direction: column;
@@ -24,7 +27,36 @@ body{background-color: black;}
         justify-content: center;
         align-items: center;
     }
+    .noView{
+        height: 100%;
+        width: 33%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: brown;
+    }
+    .view{
+        border: 1px brown solid;
+        height: 100%;
+        width: 33%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .reference{
+        height: 100%;
+        width: 33%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: brown;
+        background-image: url('../sources/compass.png');
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
 }
+
 .buttons{
     height: 1%;
     width: 100%;
@@ -32,12 +64,12 @@ body{background-color: black;}
     justify-content: center;
     align-items: center;
     button{
-        width: 15%;
+        width: 25%;
         color: white;
         border: 1px solid white;
         background-color: transparent;
         margin-bottom: 5%;
-        margin-right: 4%;
+        margin-right: 1%;
         a{
             color: white;
             text-decoration: none;
